[gd_scene load_steps=33 format=3 uid="uid://c87irqyi4rgwl"]

[ext_resource type="Script" uid="uid://toq2b6ifkfnw" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="Texture2D" uid="uid://bq7f0kn3y66vx" path="res://entities/player/assets/knight.png" id="2_abrql"]
[ext_resource type="PackedScene" uid="uid://c5sl8xjyvydow" path="res://components/health/health_component.tscn" id="3_sglur"]
[ext_resource type="PackedScene" uid="uid://qwe3qlan4mdv" path="res://components/attack/attack_component.tscn" id="4_bls4j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_symyc"]
size = Vector2(13, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghoj8"]
atlas = ExtResource("2_abrql")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1t22"]
atlas = ExtResource("2_abrql")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50fht"]
atlas = ExtResource("2_abrql")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuv6x"]
atlas = ExtResource("2_abrql")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpopc"]
atlas = ExtResource("2_abrql")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sglur"]
atlas = ExtResource("2_abrql")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bls4j"]
atlas = ExtResource("2_abrql")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkugw"]
atlas = ExtResource("2_abrql")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjmc"]
atlas = ExtResource("2_abrql")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abrql"]
atlas = ExtResource("2_abrql")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwj3"]
atlas = ExtResource("2_abrql")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26q78"]
atlas = ExtResource("2_abrql")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bectd"]
atlas = ExtResource("2_abrql")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvtmh"]
atlas = ExtResource("2_abrql")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7thud"]
atlas = ExtResource("2_abrql")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qjk"]
atlas = ExtResource("2_abrql")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ovn"]
atlas = ExtResource("2_abrql")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afbqv"]
atlas = ExtResource("2_abrql")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx6sm"]
atlas = ExtResource("2_abrql")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqrof"]
atlas = ExtResource("2_abrql")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wlsy"]
atlas = ExtResource("2_abrql")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2kln"]
atlas = ExtResource("2_abrql")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0b7"]
atlas = ExtResource("2_abrql")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtric"]
atlas = ExtResource("2_abrql")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyb6c"]
atlas = ExtResource("2_abrql")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_221hk"]
atlas = ExtResource("2_abrql")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghoj8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghoj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1t22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50fht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuv6x")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpopc")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sglur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bls4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abrql")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26q78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bectd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvtmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7thud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ovn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afbqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx6sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqrof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wlsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2kln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtric")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyb6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_221hk")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_symyc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -38)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_symyc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -48)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ghoj8")
animation = &"idle"
autoplay = "idle"

[node name="HealthComponent" parent="." instance=ExtResource("3_sglur")]
position = Vector2(-1, -100)

[node name="AttackComponent" parent="." instance=ExtResource("4_bls4j")]
position = Vector2(0, -34)
damage = 2
reach = 100.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -100)
process_callback = 0
position_smoothing_enabled = true

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="taken_damage" from="HealthComponent" to="." method="_on_health_component_taken_damage"]
